--- a/views/goal.ejs
+++ b/views/goal.ejs
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Goals</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <%- include('partials/navbar') %>
     <div class="container">
         <h1 class="mt-5 mb-4">My Goals</h1>
         <ul class="list-group">
@@ -43,5 +43,6 @@
             progressBar.style.width = widthPercentage + '%';
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
