--- a/views/welcome_guest.ejs
+++ b/views/welcome_guest.ejs
@@ -9,8 +9,8 @@
 <body>
     <%- include('partials/navbar') %>
     <div class="d-flex flex-column justify-content-center align-items-center vh-100">
-        <h1 class="text-center display-1">Welcome to SoulWander</h1>
-        <p class="text-center display-5 mb-5">Find yourself. Find peace.</p>
+        <h1 class="text-center display-1"><%= __('welcome_to_soulwander') %></h1>
+        <p class="text-center display-5 mb-5"><%= __('find_yourself') %></p>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
