Added admin info in README.MD

--- a/views/goal.ejs
+++ b/views/goal.ejs
@@ -12,7 +12,7 @@
         <h1 class="mt-5 mb-4">My Goals</h1>
         <ul class="list-group">
             <% goals.forEach(goal => { %>
-                <li class="list-group-item">
+                <li class="list-group-item mt-3 mb-3">
                     <h5 class="mb-3"><%= goal.description %></h5>
                     <p><strong>Category:</strong> <%= goal.category %></p>
                     <p><strong>Days to Accomplish:</strong> <%= goal.daysToAccomplish %></p>
