--- a/views/admin_dash.ejs
+++ b/views/admin_dash.ejs
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <style>
+        .navbar-custom {
+            background-color: #a3e7fc; 
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+    
+        .navbar-brand {
+            display: flex;
+            align-items: center;
+            gap: 10px; 
+        }
+    
+        .navbar-brand img {
+            border-radius: 35px; 
+        }
+    
+        .navbar-brand .logo-text {
+            font-size: 1.5em; 
+        }
+        
+        
+    
+       
+    
+        
+    </style>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/images/logo.png" alt="SoulWander" width="70" height="70">
+                <span class="logo-text">SoulWander</span>
+            </a>
+           </div>
+          
+          <a href="/logout" class="nav-link mx-5">Logout</a>
+         
+    </nav>
+    
     <div class="container mt-5">
         <h1 class="mb-4">Admin Dashboard</h1>
         <ul class="list-group mb-4">
