--- a/views/advices.ejs
+++ b/views/advices.ejs
@@ -7,6 +7,110 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> <!-- Include Bootstrap CSS -->
 </head>
 <body>
+    <style>
+        .navbar-custom {
+            background-color: #a3e7fc; 
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+    
+        .navbar-brand {
+            display: flex;
+            align-items: center;
+            gap: 10px; 
+        }
+    
+        .navbar-brand img {
+            border-radius: 35px; 
+        }
+    
+        .navbar-brand .logo-text {
+            font-size: 1.5em; 
+        }
+        
+        .btn-outline-success {
+            background-color: #ACE894;
+        }
+    
+        .btn-custom {
+            --bs-btn-color: var(--bs-black);
+            --bs-btn-bg: #26c485;
+            --bs-btn-border-color: #26c485;
+            --bs-btn-border-radius: .5rem;
+            --bs-btn-hover-color: var(--bs-black);
+            --bs-btn-hover-bg: #26c485;
+            --bs-btn-hover-border-color: #26c485;
+            --bs-btn-focus-shadow-rgb: #26c485;
+            --bs-btn-active-color: var(--bs-btn-hover-color);
+            --bs-btn-active-bg: #26c485;
+            --bs-btn-active-border-color: #26c485;
+        }
+    
+        .btn-custom .dropdown-toggle {
+            display: flex;
+            align-items: center;
+            gap: 10px; 
+        }
+    
+        .btn-custom img {
+            order: 1;
+        }
+    
+        .btn-custom span {
+            order: 2;
+            font-size: 1.3em; 
+        }
+    
+        .language-select {
+            border: 0;
+            background: transparent;
+            padding: 0.5rem;
+            margin-left: 1rem;
+        }
+    </style>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/images/logo.png" alt="SoulWander" width="70" height="70">
+                <span class="logo-text">SoulWander</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto">
+                    
+                    <% if (!loggedInUser) { %>
+                        <a href="/signup" class="nav-link">Sign Up</a>
+                        
+                    <% } else { %>
+                        <form class="d-flex">
+                            <select class="form-select language-select" onchange="window.location.href = '?lang=' + this.value">
+                                <option value="ru" <%= (userLanguage === 'ru') ? 'selected' : '' %>>Русский</option>
+                                <option value="en" <%= (userLanguage === 'en') ? 'selected' : '' %>>English</option>
+                            </select>
+                        </form>
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle btn btn-custom" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <%= loggedInUser.username %>
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="/profile">My Profile</a></li>
+                                <li><a class="dropdown-item" href="/goal">My Goals</a></li>
+                                <li><a class="dropdown-item" href="/journal">My Journal</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                            </ul>
+                        </div>
+                        
+                    <% } %>
+                   
+                </div>
+            </div>
+        </div>
+    </nav>
+    
     <div class="container">
         <h1 class="mt-5 mb-4">Advices</h1>
         <div class="row">
@@ -39,6 +143,7 @@
             <% }); %>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
