--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -38,7 +38,7 @@
     <h1 class="display-5 text-center mb-4">How are you feeling today?</h1>
     <form id="moodForm" action="/new-entry" method="GET">
       <div class="feeling-images">
-        <% const moods = ['Happy', 'Calm', 'Confused', 'Angry', 'Sad']; %>
+        <% const moods = ['happy', 'calm', 'confused', 'angry', 'sad']; %>
         <% moods.forEach((mood, index) => { %>
           <img src="/images/Image<%= index + 1 %>.png" alt="<%= mood %>" data-mood="<%= mood %>" class="mood-img">
         <% }); %>
@@ -49,8 +49,43 @@
       <h2 id="feelingMessage"></h2>
       <button id="newEntryBtn" class="btn btn-primary ">Start New Entry</button>
     </div>
+    <div class="container">
+        <h1 class="mt-5 mb-4">My Goals</h1>
+        <ul class="list-group">
+            <% goals.forEach(goal => { %>
+                <li class="list-group-item mt-5 mb-5">
+                    <h5 class="mb-3"><%= goal.description %></h5>
+                    <p><strong>Category:</strong> <%= goal.category %></p>
+                    <p><strong>Days to Accomplish:</strong> <%= goal.daysToAccomplish %></p>
+            
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="<%= goal.progress %>" aria-valuemin="0" aria-valuemax="<%= goal.daysToAccomplish %>"
+                            id="progress-bar-<%= goal._id %>">
+                            <%= goal.progress %> / <%= goal.daysToAccomplish %> days
+                        </div>
+                    </div>
+            
+                    <form class="mt-3 mb-3 " action="/updateProgress/<%= goal._id %>" method="POST">
+                        <button type="submit" class="btn btn-primary">Update Progress</button>
+                    </form>
+                </li>
+            <% }); %>
+        </ul>
+        
+
+        <a href="/newGoal" class="btn btn-primary mt-3 mb-5">Add New Goal</a>
+    </div>
   </div>
+  <%- include('partials/footer') %> 
+
   <script>
+     document.querySelectorAll('.progress-bar').forEach(function(progressBar) {
+            var progress = progressBar.getAttribute('aria-valuenow');
+            var maxProgress = progressBar.getAttribute('aria-valuemax');
+            var widthPercentage = (progress / maxProgress) * 100;
+            progressBar.style.width = widthPercentage + '%';
+        });
+
     const feelingImages = document.querySelectorAll('.feeling-images img');
     const moodInput = document.getElementById('moodInput');
     const moodForm = document.getElementById('moodForm');
@@ -78,5 +113,6 @@
   
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  
 </body>
 </html>
