--- a/views/welcome_guest.ejs
+++ b/views/welcome_guest.ejs
@@ -12,6 +12,7 @@
         <h1 class="text-center display-1"><%= __('welcome_to_soulwander') %></h1>
         <p class="text-center display-5 mb-5"><%= __('find_yourself') %></p>
     </div>
+    <%- include('partials/footer') %> 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </html>
